# zap-rs

./: .gitignore  Cargo.toml  README.md  tauri.conf.json
src/: lib.rs  tray.rs  window.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  logging.rs  main.rs  tray.rs  zap_rs_lib.rs
